# ragsperiments

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
ragsperiments/: chunk.py  questions.py  utils.py
ragsperiments/rag/: basic.py
